[gd_scene load_steps=7 format=3 uid="uid://c3ef34ahekjeb"]

[ext_resource type="PackedScene" uid="uid://bcsf5h08m5ahk" path="res://Astronauta/astronauta.tscn" id="1_l35g8"]
[ext_resource type="Script" path="res://Juego/main.gd" id="1_ymqid"]
[ext_resource type="PackedScene" uid="uid://wckyo1g1rr0l" path="res://Ignorancia/Ignorancia.tscn" id="2_v3pkp"]
[ext_resource type="PackedScene" uid="uid://dhgulm4nlmp8h" path="res://Numero/numero.tscn" id="3_n0f0n"]
[ext_resource type="Texture2D" uid="uid://cmr06vl763fjb" path="res://Arte/Texturas/galaxia_6.png" id="4_3pcbq"]
[ext_resource type="PackedScene" uid="uid://rjvt7xihgjvo" path="res://Juego/HUD.tscn" id="4_x8day"]

[node name="Main" type="Node"]
script = ExtResource("1_ymqid")
ignorancia_escena = ExtResource("2_v3pkp")
numero_escena = ExtResource("3_n0f0n")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(640.5, 360)
scale = Vector2(2.50195, 1.40625)
texture = ExtResource("4_3pcbq")

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
color = Color(0.76701, 0.782066, 0.636377, 0.247059)

[node name="Astronauta" parent="." instance=ExtResource("1_l35g8")]

[node name="TimerIgnorancia" type="Timer" parent="."]
wait_time = 0.696

[node name="TimerEsperaEcuacion" type="Timer" parent="."]

[node name="TimerNumero" type="Timer" parent="."]

[node name="TimerInicio" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PosicionInicialAstronauta" type="Marker2D" parent="."]
position = Vector2(64, 128)

[node name="HUD" parent="." instance=ExtResource("4_x8day")]

[connection signal="colisiono_con_ignorancia" from="Astronauta" to="." method="_on_astronauta_colisiono_con_ignorancia"]
[connection signal="hit" from="Astronauta" to="." method="_on_astronauta_hit"]
[connection signal="timeout" from="TimerIgnorancia" to="." method="_on_timer_ignorancia_timeout"]
[connection signal="timeout" from="TimerEsperaEcuacion" to="." method="_on_timer_espera_ecuacion_timeout"]
[connection signal="timeout" from="TimerNumero" to="." method="_on_timer_numero_timeout"]
[connection signal="timeout" from="TimerInicio" to="." method="_on_timer_inicio_timeout"]
